--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
+.main-container{
+  background: white;
+  height: 100vh;
   text-align: center;
+  padding-top: 28px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
   color: white;
+  gap: 15vw;
+  padding: 50px;
+  margin-right: 200px;
 }
 
-.App-link {
-  color: #61dafb;
+.resume{
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.projects{
+
+}
+
+.image{
+  border-radius: 200px;
 }
