--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   height: 100vh;
   text-align: center;
   padding-top: 28px;
+
 }
 
 .header{
@@ -11,9 +12,14 @@
   justify-content: center;
   align-items: center;
   color: white;
-  gap: 15vw;
+  gap: 10vw;
   padding: 50px;
-  margin-right: 200px;
+  background:gray;
+}
+
+.NameTitle{
+  color: black;
+  text-align: center;
 }
 
 .resume{
