--- a/src/App.css
+++ b/src/App.css
@@ -9,27 +9,54 @@
 .header{
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   color: white;
-  gap: 10vw;
-  padding: 50px;
-  background:gray;
+  padding: 0 10vw;
+  background: #404158;
+  background-color: #404158;
 }
 
 .NameTitle{
-  color: black;
+  color: white;
   text-align: center;
+  font: 45px Arial, sans-serif;
+  /* position: relative;
+  left: 100px;
+  bottom: 100px;
+  width: 1000px; */
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  /* position: relative;
+  right: 245px;
+  top: 50px; */
 }
 
 .resume{
-
 }
 
 .projects{
-
+  background-color: #fdfafa;
 }
 
 .image{
   border-radius: 200px;
+  border-block: 5px solid #62657b;
+  background-color: black;
+}
+
+.column {
+  float: left;
+  width: 50%;
+  text-align: center;
+}
+
+.row:after {
+  content:"";
+  display: table;
+  clear: both;
 }
