--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
+#root{
+  font-family: 'Arial'
+}
 .main-container{
   background: white;
   height: 100vh;
   text-align: center;
-  padding-top: 28px;
+  //padding-top: 28px;
 
 }
 
@@ -12,35 +15,28 @@
   justify-content: space-between;
   align-items: center;
   color: white;
-  padding: 0 10vw;
-  background: #404158;
+  padding: 2vw 10vw;
   background-color: #404158;
 }
 
-.NameTitle{
+.info-text {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.nameTitle{
   color: white;
   text-align: center;
   font: 45px Arial, sans-serif;
-  /* position: relative;
-  left: 100px;
-  bottom: 100px;
-  width: 1000px; */
+  margin-bottom: 18px;
 }
 
 .contact {
   display: flex;
   flex-direction: column;
   align-items: end;
-  /* position: relative;
-  right: 245px;
-  top: 50px; */
-}
-
-.resume{
-}
-
-.projects{
-  background-color: #fdfafa;
+  gap: 20px;
 }
 
 .image{
@@ -49,14 +45,47 @@
   background-color: black;
 }
 
-.column {
-  float: left;
-  width: 50%;
-  text-align: center;
+.aboutMe{
+  //margin: auto;
+  background-color: #c3c3cd;
 }
 
+.titleAboutMe{
+  font-weight: bold;
+  font-size:35px;
+  margin: auto;
+}
+
+.descriptionAboutMe{
+  font-size: 22px;
+}
+
+.teste {
+  background-color: #d0d0df;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  text-align: justify;
+  justify-content: start;
+}
+
+.left-column {
+  margin-right: 12vw;
+}
+
+.row {
+  display: flex;
+  align-items: space-between;
+  justify-content: center;
+  margin: 0 8vw;
+  font-size: 18px;
+}
 .row:after {
   content:"";
   display: table;
   clear: both;
 }
+
