--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,23 @@
-#root{
-  font-family: 'Arial'
+#root {
+  font-family: "Arial";
 }
-.main-container{
+.main-container {
   background: white;
   height: 100vh;
   text-align: center;
   //padding-top: 28px;
-
 }
 
-.header{
+.header {
+  z-index: 3;
+  position: absolute;
+  top: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   color: white;
   padding: 2vw 10vw;
-  background-color: #404158;
 }
 
 .info-text {
@@ -25,7 +26,7 @@
   gap: 12px;
 }
 
-.nameTitle{
+.nameTitle {
   color: white;
   text-align: center;
   font: 45px Arial, sans-serif;
@@ -39,24 +40,24 @@
   gap: 20px;
 }
 
-.image{
+.image {
   border-radius: 200px;
   border-block: 5px solid #62657b;
   background-color: black;
 }
 
-.aboutMe{
+.aboutMe {
   //margin: auto;
   background-color: #c3c3cd;
 }
 
-.titleAboutMe{
+.titleAboutMe {
   font-weight: bold;
-  font-size:35px;
+  font-size: 35px;
   margin: auto;
 }
 
-.descriptionAboutMe{
+.descriptionAboutMe {
   font-size: 22px;
 }
 
@@ -84,8 +85,24 @@
   font-size: 18px;
 }
 .row:after {
-  content:"";
+  content: "";
   display: table;
   clear: both;
 }
 
+.background {
+  background-color: #000033; /* dark blue color */
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.star {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background: silver;
+  border-radius: 50%;
+}
