--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 #root {
   font-family: "Arial";
   color: #ede7f6;
@@ -129,4 +135,53 @@ li {
 
 .carousel .carousel-status {
   z-index: -1;
+}
+
+@media only screen and (max-width: 1000px) {
+  .image {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .info-container {
+    left: 50%;
+    transform: translateX(-50%);
+    top: 280px;
+  }
+  .contact {
+    left: 50%;
+    transform: translateX(10%);
+    top: 300px;
+    text-align: right;
+    width: 100%;
+  }
+  .background {
+    height: 850px;
+  }
+  .body-part {
+    justify-content: space-between;
+  }
+  .left-column {
+    left: 50%;
+    transform: translateX(60%);
+    margin-top: 150px;
+    margin-right: 50%;
+    width: 100%;
+    font-size: 25px;
+    gap: 0px;
+    text-align: center;
+  }
+  .carousel {
+    font-size: 14px;
+  }
+  .right-column {
+    left: 50%;
+    transform: translateX(-105%);
+    margin-top: 550px;
+    gap: 22px;
+    width: 100vw;
+    text-align: center;
+  }
+  .icons {
+    gap: 8px;
+  }
 }
