--- a/src/App.css
+++ b/src/App.css
@@ -65,11 +65,17 @@
   width: 50%;
   text-align: justify;
   justify-content: start;
+  margin-top: 36px;
 }
 
 .left-column {
   margin-right: 12vw;
   height: 100vh;
+  gap: 42px;
+}
+
+.right-column {
+  gap: 32px;
 }
 
 .row {
