--- a/src/App.css
+++ b/src/App.css
@@ -14,17 +14,14 @@
 }
 
 .info-container {
-  position: absolute;
-  right: 8vw;
+  display: inline;
+  position: relative;
   top: 36px;
   z-index: 3;
-}
-
-.info-text {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 12px;
+  //width: 40%;
+  //height: 60%;
+  background: green;
+  flex-direction: column;
 }
 
 .nameTitle {
@@ -34,12 +31,20 @@
   z-index: 3;
 }
 
-.contact {
+.info-text {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 12px;
+  background: red;
+}
+
+.contact {
+  display: flex-inline;
   flex-direction: column;
   align-items: end;
   gap: 20px;
-  position: absolute;
+  position: relative;
   right: 0;
 }
 
