--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,11 @@
 .Footer {
   padding: 24px;
-  background: #091623;
+  background: rgb(17, 42, 66);
+  background: linear-gradient(
+    0deg,
+    rgba(17, 42, 66, 1) 33%,
+    rgba(18, 45, 71, 0.6362920168067228) 82%
+  );
   box-shadow: 3px 4px 26px rgba(0, 0, 0, 0.25);
   margin-top: 120px;
   width: 100%;
@@ -8,6 +13,7 @@
   align-items: center;
   justify-content: center;
   color: #ffffff;
+  border-radius: 8px;
 
   font-family: "Inter";
   font-style: normal;
